<resources>
    <string name="app_name">Your Journey to the Olympics</string>
    <string name="title_home">Home</string>
    <string name="title_booking">Booking</string>
    <string name="title_profile">Profile</string>
    <string name="enter_card_number_16_digits">Enter card number 16 digits</string>
    <string name="your_cards">Your cards</string>
    <string name="textview">TextView</string>
    <string name="close">CLOSE</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="bus_type">Bus type</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="enter_csv_to_pay">Enter CSV to pay</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="start_time">Start time</string>
    <string name="duration">Duration</string>
    <string name="bus_travel_time">Bus travel time</string>
    <string name="book">Book</string>
    <string name="your_schedule">Your Schedule</string>
    <string name="book1">BOOK</string>
    <string name="your_journey_to_the_olympics">Your Journey to the Olympics</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up?</string>
    <string name="user_name">User Name</string>
    <string name="card">Card</string>
    <string name="username">username</string>
    <string name="password1">password</string>
    <string name="card_no_csv">CARD NO csv</string>
    <string name="log_out">Log Out</string>
    <string name="add_card">Add Card</string>
    <string name="change_card">Change Card</string>
    <string name="user_name1">๊User Name</string>
    <string name="password">Password</string>
    <string name="card_no">Card No.</string>
    <string name="csv">CSV</string>
    <string name="sign_up1">Sign Up</string>
    <string name="sign_up2">SIGN UP</string>
    <string name="enter_card_no">Enter Card No.</string>
    <string name="enter_csv">Enter CSV</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="depart">Depart</string>
    <string name="arrive">Arrive</string>
    <string name="bustype">BusType</string>
    <string name="event">Event</string>
    <string name="seat_no">Seat NO.</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="type">Type</string>
    <string name="seat_left">Seat Left</string>
    <string name="date">Date</string>
    <string name="sport">Sport</string>
    <string name="discipline">Discipline</string>
    <string name="category">Category</string>
    <string name="venue">Venue</string>
    <string name="start_time1">Start Time</string>
</resources>
