<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/dia_photo"
            android:layout_width="350dp"
            android:layout_height="116dp"
            android:layout_gravity="top"
            android:src="@drawable/ceremony_title" />

        <TextView
            android:id="@+id/dia_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sport"
            android:textColor="#012067"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dia_discipline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/discipline"
            android:textColor="#012067"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dia_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textColor="#012067"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dia_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/venue"
            android:textColor="#012067" />

        <TextView
            android:id="@+id/dia_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date"
            android:textColor="#012067" />

        <TextView
            android:id="@+id/dia_startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/start_time"
            android:textColor="#012067" />

        <TextView
            android:id="@+id/dia_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/duration"
            android:textColor="#012067" />

        <TextView
            android:id="@+id/dia_busTravelTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/bus_travel_time"
            android:textColor="#012067" />

        <Button
            android:id="@+id/book_button"
            android:layout_width="90dp"
            android:layout_height="55dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="35dp"
            android:background="#012067"
            android:gravity="center"
            android:text="@string/book"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>