<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dia_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_card"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/dia_cardNO"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/enter_card_number_16_digits"
            android:inputType="number"
            android:maxEms="15" />

        <EditText
            android:id="@+id/dia_card_csv"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/enter_csv"
            android:inputType="number"
            android:maxEms="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/dia_add_card_cancel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/dia_add_card_confirm"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                android:text="@string/confirm"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>